# WFC

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain  samples.txt
samples/: indifferent.csv  mondieu_initial_world.txt  mondieu_rules.csv  pipes_rules.csv  sample.csv  sample1.csv  sample2.csv  sample3.csv  sample3_initial_state.txt  sample4.csv  sample4_initial_world_contradictory.txt
src/: convert.rs  main.rs  tiled2_image_io.rs  tiled2d_image_io.rs  tiled2d_wfc.rs  tiled3_wfc.rs  tiled3d_text_io.rs  tiled3d_wfc.rs
wfc_cli/: Cargo.toml  README.md
wfc_cli/src/: convert.rs  main.rs  text_io.rs
wfc_core/: Cargo.toml
wfc_core/src/: bitset.rs  bitvec.rs  constbitvec.rs  convert.rs  lib.rs  slots.rs  world.rs
wfc_dylib/: Cargo.toml  build.rs  cbindgen.toml
wfc_dylib/ffi/: wfc.h  wfc.hpp
wfc_dylib/src/: lib.rs
wfc_gh/: Info.cs  README.md  Resources.Designer.cs  Resources.resx  WaveFunctionCollapse.cs  test.gh  wfc_gh.csproj  wfc_gh.sln
