[package]
name = "wfc1"
version = "0.1.0"
authors = ["yanchith <yanchi.toth@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
csv = "1.1.3"
env_logger = "0.7.1"
hibitset = "0.6.3"
log = "0.4.11"
png = "0.16.7"
rand = "0.7.3"
rand_pcg = "0.2.1"
regex = "1.3.9"
tinyvec = { version = "0.4.1", features = ["alloc"] }
