[package]
name = "wfc_cli"
version = "0.1.0"
authors = ["yanchith <yanchi.toth@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.13"
clap = "3.0.0-beta.1"
csv = "1.1.3"
env_logger = "0.7.1"
log = "0.4.11"
regex = "1.3.9"
tinyvec = { version = "0.4.1", features = ["alloc"] }
wfc_core = { path = "../wfc_core" }
