[package]
name = "wfc_core"
version = "0.1.0"
authors = ["yanchith <yanchi.toth@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
bumpalo = { version = "3.8.0", features = ["allocator_api"] }
fxhash = "0.2.1"
hashbrown = { version = "0.11.2", features = ["bumpalo"] }
oorandom = "11.1.3"
